@@ -55,4 +55,4 @@ Tom Molesworth <TEAM@cpan.org>
 
 =head1 LICENSE
 
-Copyright Tom Molesworth 2015. Licensed under the same terms as Perl itself.
+Copyright Tom Molesworth 2015-2016. Licensed under the same terms as Perl itself.
