@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	New features:
+	* Support for private channels:
+	https://pusher.com/docs/client_api_guide/client_private_channels
 
 0.001     2015-02-15 20:26:30+00:00 Europe/London
 	Initial CPAN release
